test/invalid/baseline/no-semicolon-operation.txt
Syntax error at line 3 in no-semicolon-operation.webidl, since `interface Waka`:
  void eve()
  ^ Unterminated operation, expected `;`
